# haskell_codewars_katas

./: README.md  notekeeper.cabal
src/: EightKyu.hs  FiveKyu.hs  FourKyu.hs  Kata.hs  Kata2.hs  ScottEncoding.hs  SevenKyu.hs  SixKyu.hs
tests/: Main.hs
