cabal-version:       3.8
name:                notekeeper
version:             0.1.0.0
category:            Web
build-type:          Simple

library katas
  build-depends:      base >=4.10
  hs-source-dirs:     src
  default-language:   Haskell2010

test-suite my-tests
  main-is: Main.hs
  build-depends: base, hspec, mtl
  other-modules: Kata, EightKyu, SevenKyu, SixKyu, FiveKyu, FourKyu, ScottEncoding
  hs-source-dirs: tests src
  default-language: Haskell2010